--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -17,8 +17,9 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-1,2560x1440@144,0x0,1
-monitor=DP-3,1920x1080@75,2560x0,1
+# Configure your monitors here:
+monitor = ,preferred,auto,1
+
 
 
 ###################
@@ -31,7 +32,7 @@ monitor=DP-3,1920x1080@75,2560x0,1
 $terminal = kitty -e bash -c "fastfetch; exec bash"
 $filemanager = nemo
 $menu = rofi -show drun -show-icons
-$browser = /opt/zen-browser-bin/zen-bin
+$browser = # YOUR WEB BROWSER HERE
 $taskmanager = kitty -e bash -c "btop; exec bash"
 
 #################
