--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,38 +1,31 @@
 
+##############################
+### ZACH'S HYPRLAND CONFIG ###
+##############################
 
-# This is an example Hyprland config file.
-# Refer to the wiki for more information.
-# https://wiki.hyprland.org/Configuring/
+### It's pretty much just the default config with some tweaks. ###
 
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-
-# You can split this configuration into multiple files
-# Create your files separately and then link them to this file like this:
-# source = ~/.config/hypr/myColors.conf
-
+### VVV PLEASE SET UP YOUR MONITORS BELOW VVV ###
 
 ################
 ### MONITORS ###
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# Configure your monitors here:
 monitor = ,preferred,auto,1
 
 
-
-###################
-### MY PROGRAMS ###
-###################
+#######################
+### ZACH'S PROGRAMS ###
+#######################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
-# Set programs that you use
+# These are the programs I use, save for yazi, which is my main file manager. I have it bound in the keybinds section.
 $terminal = kitty -e bash -c "fastfetch; exec bash"
 $filemanager = nemo
 $menu = rofi -show drun -show-icons
-$browser = # YOUR WEB BROWSER HERE
+$browser = /opt/zen-browser-bin/zen-bin
 $taskmanager = kitty -e bash -c "btop; exec bash"
 
 #################
@@ -48,6 +41,7 @@ $taskmanager = kitty -e bash -c "btop; exec bash"
 exec-once = waybar &
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprpaper &
+
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -86,7 +80,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 2
+    rounding = 5
     rounding_power = 5
 
     # Change transparency of focused and unfocused windows
@@ -103,7 +97,7 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 5
+        size = 15
         passes = 2
         new_optimizations = true
 
@@ -164,8 +158,8 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # "If true disables the random hyprland logo / anime girl background. :(" WE HATE YOU I DONT WANT LITTLE ANIME GIRLS ON MY SCREEN YOU ARE A PEDOPHILE.
 }
 
 
@@ -217,6 +211,7 @@ bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, kitty -e yazi
+bind = $mainMod, F, fullscreen
 bind = $mainMod SHIFT, E, exec, $filemanager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
@@ -283,6 +278,7 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Swap focused window with neighbor using Super + Arrow keys
+# I don't know why this isn't here by default, it rules. 
 bind = $mainMod SHIFT, left, swapwindow, l
 bind = $mainMod SHIFT, right, swapwindow, r
 bind = $mainMod SHIFT, up, swapwindow, u
