--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 # Font family and size
 
- font_family      Mononoki Nerd Font
- font_size 14.0
+ font_family RobotoMono Nerd Font
+ font_size 13.0
 
 # Disable annoying "are you sure?" prompt to close instances of kitty
 
