--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -11,9 +11,12 @@
 ### MONITORS ###
 ################
 
-# See https://wiki.hyprland.org/Configuring/Monitors/
+# This is just the default, just so you can see your damn screen out the box. See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = ,preferred,auto,1
 
+# My personal monitor setup, nice visual reference. 
+# monitor=DP-1,2560x1440@144,0x0,1
+# monitor=DP-3,1920x1080@75,2560x0,1
 
 #######################
 ### ZACH'S PROGRAMS ###
