--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,49 +1,47 @@
+monitor = ,preferred,auto,1
 
-##############################
-### ZACH'S HYPRLAND CONFIG ###
-##############################
-
-### It's pretty much just the default config with some tweaks. ###
-
-### VVV PLEASE SET UP YOUR MONITORS BELOW VVV ###
+# This is my hyprland configuration that I use on my laptop. It's blue because blue and yellow are uhhh almost opposites but not really
+# Main differences are that this config has optimizations for laptop uses like trackpad settings and such.
 
 ################
 ### MONITORS ###
 ################
 
-# This is just the default, just so you can see your damn screen out the box. See https://wiki.hyprland.org/Configuring/Monitors/
+# See https://wiki.hyprland.org/Configuring/Monitors/
+# I have my laptop screen set up below as an example. Yours will likely be different.
+# monitor = eDP-1,1536x1024@60,0x0,1
 monitor = ,preferred,auto,1
 
-# My personal monitor setup, nice visual reference. 
-# monitor=DP-1,2560x1440@144,0x0,1
-# monitor=DP-3,1920x1080@75,2560x0,1
+################
+### PROGRAMS ###
+################
 
-#######################
-### ZACH'S PROGRAMS ###
-#######################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-
-# These are the programs I use, save for yazi, which is my main file manager. I have it bound in the keybinds section.
+# Using wofi instead of rofi, as well as a dedicated keybind for discord as I only have it open when I'm actively using it.
 $terminal = kitty -e bash -c "fastfetch; exec bash"
-$filemanager = nemo
-$menu = rofi -show drun -show-icons
-$browser = /opt/zen-browser-bin/zen-bin
-$taskmanager = kitty -e bash -c "btop; exec bash"
+$fileManagerGUI = nemo
+$fileManager = kitty -e bash -c "yazi; exec bash"
+$menu = wofi --show drun
+$browser = qutebrowser &
+$chat = discord &
 
 #################
 ### AUTOSTART ###
 #################
 
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
+# Just the essentials
+exec-once = waybar & hyprpaper &
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-exec-once = waybar &
-exec-once = systemctl --user start hyprpolkitagent
-exec-once = hyprpaper &
+# Sway idle, turn off display after 10 minutes of inactivity.
+# Tells sway idle that hitting a key and molesting the trackpad wakes up the screen.
+exec-once = swayidle -w \
+	timeout 600 'hyprctl dispatch dpms off' \
+	resume 'hyprctl dispatch dpms on'
+
+misc {
+	mouse_move_enables_dpms = true
+	key_press_enables_dpms = true
+}
+
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -51,9 +49,8 @@ exec-once = hyprpaper &
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,30
+env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
 
 #####################
 ### LOOK AND FEEL ###
@@ -63,19 +60,20 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 1
-    gaps_out = 4
+    gaps_in = 2
+    gaps_out = 5
 
-    border_size = 2
+    border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(ffe041ee) rgba(ff4160ee) 45deg
+    col.active_border = rgba(258FC4ee) rgba(F768A3ee) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+    # I have this on because it's easier on a trackpad. However I never have floating windows so it hardly matters.
+    resize_on_border = true
 
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+    # Who would ever want this on bro
     allow_tearing = false
 
     layout = dwindle
@@ -83,15 +81,15 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 5
-    rounding_power = 5
+    rounding = 10
+    rounding_power = 2
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
 
     shadow {
-        enabled = false
+        enabled = true
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
@@ -100,12 +98,13 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 15
-        passes = 2
-        new_optimizations = true
+        size = 5
+        passes = 4
 
         vibrancy = 0.1696
     }
+    blurls = waybar
+    layerrule = blur,waybar
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
@@ -161,8 +160,8 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true # "If true disables the random hyprland logo / anime girl background. :(" WE HATE YOU I DONT WANT LITTLE ANIME GIRLS ON MY SCREEN YOU ARE A PEDOPHILE.
+    force_default_wallpaper = 1 # Set to 0 or 1 to disable pedophile wallpapers
+    disable_hyprland_logo = true # "If true disables the random hyprland logo / anime girl background. :(" thank god 
 }
 
 
@@ -181,17 +180,16 @@ input {
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-    accel_profile = flat
-    force_no_accel = 1
 
+    # Makes the trackpad nice :D 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
 }
 
 # Example per-device config
@@ -213,22 +211,21 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, kitty -e yazi
-bind = $mainMod, F, fullscreen
-bind = $mainMod SHIFT, E, exec, $filemanager
+bind = $mainMod, D, exec, $chat
+bind = $mainMod, B, exec, $browser
+bind = $mainMod, E, exec, $fileManager
+bind = $mainMod SHIFT, E, exec, $fileManagerGUI
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, A, exec, hyprshot -m region
-bind = $mainMod, B, exec, $browser
-bind = $mainMod, T, exec, $taskmanager
+bind = $mainMod, N, togglesplit, # dwindle
+bind = $mainMod, A, exec, hyprshot -m region -o ~/Pictures/
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+# Move focus with mainMod + vim binds
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -267,12 +264,13 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
+# This came in the default config, goated as fuck and worked with my laptop out of the box.
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
@@ -280,14 +278,12 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-# Swap focused window with neighbor using Super + Arrow keys
-# I don't know why this isn't here by default, it rules. 
-bind = $mainMod SHIFT, left, swapwindow, l
-bind = $mainMod SHIFT, right, swapwindow, r
-bind = $mainMod SHIFT, up, swapwindow, u
-bind = $mainMod SHIFT, down, swapwindow, d
-
-
+# Swap focused window with neighbor
+# Goated bind to have, idk why it's not set up like this by default
+bind = $mainMod SHIFT, H, swapwindow, l
+bind = $mainMod SHIFT, L, swapwindow, r
+bind = $mainMod SHIFT, K, swapwindow, u
+bind = $mainMod SHIFT, J, swapwindow, d
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
