--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/.config/hypr/minimal sun.jpg
-wallpaper = ,~/.config/hypr/minimal sun.jpg
+preload = ~/.config/hypr/bluecitycool.jpg
+wallpaper = ,~/.config/hypr/bluecitycool.jpg
 
