--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -11,32 +11,28 @@
 
  background_opacity 0.75
 
-# Zach's Kitty Color Scheme:
+# Base16 'Eris' Color Scheme:
 
-foreground   #F9F5D7
-background   #2C2A1D
-cursor       #FFF176
-selection_background #FFEB99
+foreground   #9AAAE5 
+background   #0A0920 
+cursor       #FAAEA2 
+selection_background #F768A3
 
-color0  #2C2A1D
-color1  #FF7043
-color2  #F9F5D7
-color3  #FFEB3B
-color4  #BCAAA4
-color5  #FFD54F
-color6  #FFF59D
-color7  #FFFDE7
+color0  #0A0920
+color1  #13133A
+color2  #23255A
+color3  #333773
+color4  #4A5293
+color5  #606BAC
+color6  #7896C5
+color7  #9AAAE5
 
-color8  #5D5B3F
-color9  #FF8A65
-color10 #FFF9C4
-color11 #FFF176
-color12 #D7CCC8
-color13 #FFE082
-color14 #FFF59D
-color15 #FFFDE7
+color8  #F768A3
+color9  #F768A3
+color10 #FAAEA2
+color11 #FAAEA2
+color12 #258FC4
+color13 #258FC4
+color14 #F768A3
+color15 #F768A3
 
-# Copy + Paste keybinds, nice to have
-
-map ctrl+c copy_to_clipboard
-map ctrl+v paste_from_clipboard
