--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -1,37 +1,45 @@
 // -*- mode: jsonc -*-
 {
-    // "layer": "top", // Waybar at top layer
-    // "position": "bottom", // Waybar position (top|bottom|left|right)
-    "height": 30, // Waybar height (to be removed for auto height)
-    // "width": 1280, // Waybar width
-    "spacing": 20, // Gaps between modules (4px)
+    "layer": "top", // Waybar at top layer
+    "position": "top", // Waybar position (top|bottom|left|right)
+    "height": 20, // Waybar height (to be removed for auto height)
+    "width": 1527, // Waybar width
+    "spacing": 22, // Gaps between modules (4px)
     // Choose the order of the modules
     "modules-left": [
-        "hyprland/workspaces"
+        "hyprland/workspaces",
+        "tray"
     ],
     "modules-center": [
-        "hyprland/window"
+        "hyprland/window",
     ],
     "modules-right": [
        // "mpd",
        // "idle_inhibitor",
-        "pulseaudio",
         "network",
-        "power-profiles-daemon",
+       // "power-profiles-daemon",
+        "pulseaudio",
        // "cpu",
+        "backlight",
         "memory",
         "temperature",
-        "backlight",
        // "keyboard-state",
        // "hyprland/language",
         "battery",
        // "battery#bat2",
         "clock",
-        "tray",
         "custom/power"
     ],
     // Modules configuration
       
+
+"hyprland/window": {
+    "format": "{title}",
+    "format-empty": "zach@beavos:~",
+    "max-length": 30,
+    "icon": true,
+  },
+
 "image": {
   "path": "/tmp/waybar-mediaplayer-art",
   "size": 32,
