--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -224,11 +224,11 @@ bind = $mainMod, A, exec, hyprshot -m region
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, T, exec, $taskmanager
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+# Move focus with mainMod + vim direction keys
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -282,10 +282,10 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Swap focused window with neighbor using Super + Arrow keys
 # I don't know why this isn't here by default, it rules. 
-bind = $mainMod SHIFT, left, swapwindow, l
-bind = $mainMod SHIFT, right, swapwindow, r
-bind = $mainMod SHIFT, up, swapwindow, u
-bind = $mainMod SHIFT, down, swapwindow, d
+bind = $mainMod SHIFT, H, swapwindow, l
+bind = $mainMod SHIFT, L, swapwindow, r
+bind = $mainMod SHIFT, K, swapwindow, u
+bind = $mainMod SHIFT, J, swapwindow, d
 
 
 
