--- a/yazi/.config/yazi/yazi.toml
+++ b/yazi/.config/yazi/yazi.toml
@@ -1,6 +1,6 @@
 [opener]
 edit = [
-	{ run = 'kitty nvim "$@"', block = false }
+	{ run = 'ghostty nvim "$@"', block = false }
 ]
 
 [[manager.prepend_keymap]]
