--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -1,27 +1,28 @@
 // -*- mode: jsonc -*-
+// -*- there is too much crap in here for me to care about making it look nice. Sorry. -*-
 {
-    // "layer": "top", // Waybar at top layer
-    // "position": "bottom", // Waybar position (top|bottom|left|right)
-    "height": 30, // Waybar height (to be removed for auto height)
-    // "width": 1280, // Waybar width
-    "spacing": 4, // Gaps between modules (4px)
+    "layer": "top", // Waybar at top layer
+    "position": "top", // Waybar position (top|bottom|left|right)
+    "height": 20, // Waybar height (to be removed for auto height)
+    // "width": 1527, // Waybar width
+    "spacing": 22, // Gaps between modules (4px)
     // Choose the order of the modules
     "modules-left": [
-        "hyprland/workspaces"
+        "hyprland/workspaces",
     ],
     "modules-center": [
-        "hyprland/window"
+        "hyprland/window",
     ],
     "modules-right": [
        // "mpd",
        // "idle_inhibitor",
-        "pulseaudio",
        // "network",
-        "power-profiles-daemon",
-        "cpu",
+       // "power-profiles-daemon",
+        "pulseaudio",
+       // "cpu",
+      //  "backlight",
         "memory",
         "temperature",
-       // "backlight",
        // "keyboard-state",
        // "hyprland/language",
        // "battery",
@@ -32,6 +33,14 @@
     ],
     // Modules configuration
       
+
+"hyprland/window": {
+    "format": "{title}",
+    "format-empty": "zach@beavos:~",
+    "max-length": 30,
+    "icon": true,
+  },
+
 "image": {
   "path": "/tmp/waybar-mediaplayer-art",
   "size": 32,
@@ -57,11 +66,11 @@
          "warp-on-scroll": false,
         "format": "{icon}",
          "format-icons": {
-    //         "1": "",
-    //         "2": "",
-    //         "3": "",
-    //         "4": "",
-    //         "5": "",
+             "1": "1",
+             "2": "2",
+             "3": "3",
+             "4": "4",
+             "5": "5",
              "urgent": "",
              "focused": "",
              "default": ""
@@ -128,7 +137,6 @@
         // }
     },
     "clock": {
-        // "timezone": "America/New_York",
         "format": "{:%I:%M %p}",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
         "format-alt": "{:%Y-%m-%d}"
@@ -142,7 +150,7 @@
     },
     "temperature": {
         // "thermal-zone": 2,
-        // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
+        "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
         "critical-threshold": 80,
         // "format-critical": "{temperatureC}°C {icon}",
         "format": "{temperatureC}°C {icon}",
@@ -184,16 +192,16 @@
     },
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "{essid} ({signalStrength}%) ",
+        "format-wifi": "",
         "format-ethernet": "{ipaddr}/{cidr} ",
         "tooltip-format": "{ifname} via {gwaddr} ",
         "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠",
+        "format-disconnected": "⚠",
         "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
-        "format": "{volume}% {icon} {format_source}",
+        "format": "{volume}% {icon}",
         "format-bluetooth": "{volume}% {icon} {format_source}",
         "format-bluetooth-muted": " {icon} {format_source}",
         "format-muted": " {format_source}",
