--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,4 +1,3 @@
-
 ##############################
 ### ZACH'S HYPRLAND CONFIG ###
 ##############################
@@ -25,11 +24,11 @@ monitor = ,preferred,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # These are the programs I use, save for yazi, which is my main file manager. I have it bound in the keybinds section.
-$terminal = kitty -e bash -c "fastfetch; exec bash"
+$terminal = ghostty -e fish -c "fastfetch; exec fish"
 $filemanager = nemo
-$menu = rofi -show drun -show-icons
-$browser = /opt/zen-browser-bin/zen-bin
-$taskmanager = kitty -e bash -c "btop; exec bash"
+$menu = fuzzel
+$browser = qutebrowser
+$taskmanager = ghostty -e fish -c "btop; exec fish"
 
 #################
 ### AUTOSTART ###
@@ -63,13 +62,13 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 1
+    gaps_in = 2
     gaps_out = 4
 
-    border_size = 2
+    border_size = 4
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(ffe041ee) rgba(ff4160ee) 45deg
+    col.active_border = rgba(D85A67FF)
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -100,12 +99,15 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 15
-        passes = 2
+        size = 2
+        passes = 4
         new_optimizations = true
 
         vibrancy = 0.1696
     }
+    layerrule = blur, waybar
+    layerrule = blur, launcher
+    layerrule = ignorezero, launcher
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
@@ -213,14 +215,14 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, kitty -e yazi
+bind = $mainMod, E, exec, ghostty -e yazi
 bind = $mainMod, F, fullscreen
 bind = $mainMod SHIFT, E, exec, $filemanager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, A, exec, hyprshot -m region
+bind = $mainMod, N, togglesplit, # dwindle
+bind = $mainMod, A, exec, hyprshot -m region -o ~/Pictures/
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, T, exec, $taskmanager
 
@@ -295,6 +297,15 @@ bind = $mainMod SHIFT, J, swapwindow, d
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
+
+# Example windowrule
+# windowrule = float,class:^(kitty)$,title:^(kitty)$
+
+# Ignore maximize requests from apps. You'll probably like this.
+windowrule = suppressevent maximize, class:.*
+
+# Fix some dragging issues with XWayland
+windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
