--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -3,12 +3,11 @@
     "layer": "top", // Waybar at top layer
     "position": "top", // Waybar position (top|bottom|left|right)
     "height": 20, // Waybar height (to be removed for auto height)
-    "width": 1527, // Waybar width
+    // "width": 1527, // Waybar width
     "spacing": 22, // Gaps between modules (4px)
     // Choose the order of the modules
     "modules-left": [
         "hyprland/workspaces",
-        "tray"
     ],
     "modules-center": [
         "hyprland/window",
@@ -28,6 +27,7 @@
         "battery",
        // "battery#bat2",
         "clock",
+        "tray",
         "custom/power"
     ],
     // Modules configuration
