--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,5 +1,3 @@
-monitor = ,preferred,auto,1
-
 # This is my hyprland configuration that I use on my laptop. It's blue because blue and yellow are uhhh almost opposites but not really
 # Main differences are that this config has optimizations for laptop uses like trackpad settings and such.
 
@@ -8,19 +6,18 @@ monitor = ,preferred,auto,1
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# I have my laptop screen set up below as an example. Yours will likely be different.
-# monitor = eDP-1,1536x1024@60,0x0,1
-monitor = ,preferred,auto,1
+# My laptop screen
+monitor = eDP-1,1536x1024@60,0x0,1
+
 
 ################
 ### PROGRAMS ###
 ################
 
-# Using wofi instead of rofi, as well as a dedicated keybind for discord as I only have it open when I'm actively using it.
-$terminal = kitty -e bash -c "fastfetch; exec bash"
+$terminal = ghostty -e fish -c "'sleep 0.05 && fastfetch'; exec fish"
 $fileManagerGUI = nemo
-$fileManager = kitty -e bash -c "yazi; exec bash"
-$menu = wofi --show drun
+$fileManager = ghostty -e fish -c "yazi; exec fish"
+$menu = fuzzel
 $browser = qutebrowser &
 $chat = discord &
 
@@ -104,7 +101,9 @@ decoration {
         vibrancy = 0.1696
     }
     blurls = waybar
-    layerrule = blur,waybar
+    layerrule = blur, waybar
+    layerrule = blur, launcher
+    layerrule = ignorezero, launcher
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
@@ -212,6 +211,7 @@ bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, D, exec, $chat
+bind = $mainMod, F, fullscreen
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, E, exec, $fileManagerGUI
