tweaked hyprland.conf to include automatic monitor detection

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -6,9 +6,11 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# My laptop screen
-monitor = eDP-1,1536x1024@60,0x0,1
+# My laptop screen:
+# monitor = eDP-1,1536x1024@60,0x0,1
 
+# Automatic screen config V
+monitor = ,preferred,auto,1
 
 ################
 ### PROGRAMS ###
