--- a/fuzzel/.config/fuzzel/fuzzel.ini
+++ b/fuzzel/.config/fuzzel/fuzzel.ini
@@ -1,7 +1,7 @@
 font=Roboto Mono:weight=bold:size=13
 width=50
 layer=overlay
-prompt="BeavOS > "
+prompt="  | BeavOS > "
 placeholder="Um... do you need, like, an app or something?"
 keyboard-focus=exclusive
 
