Updated dotfiles to include starship prompt, large amount of tweaks as well

--- a/fuzzel/.config/fuzzel/fuzzel.ini
+++ b/fuzzel/.config/fuzzel/fuzzel.ini
@@ -1,4 +1,4 @@
-font=Roboto Mono Nerd Font:weight=bold:size=14
+font=Roboto Mono:weight=bold:size=14
 dpi-aware=no
 width=60
 layer=overlay
@@ -8,7 +8,7 @@ keyboard-focus=exclusive
 
 [colors]
 text=#9AAAE5FF
-background=#23255AD0
+background=#0A092090
 input=#9AAAE5FF
 placeholder=#4A5293FF
 prompt=#F768A3FF
