--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -6,18 +6,16 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# My laptop screen:
-# monitor = eDP-1,1536x1024@60,0x0,1
+# My laptop screen
+monitor = eDP-1,1536x1024@60,0x0,1
 
-# Automatic screen config V
-monitor = ,preferred,auto,1
 
 ################
 ### PROGRAMS ###
 ################
 
 $terminal = ghostty -e fish -c "'sleep 0.05 && fastfetch'; exec fish"
-$fileManagerGUI = nemo
+$fileManagerGUI = thunar
 $fileManager = ghostty -e fish -c "yazi; exec fish"
 $menu = fuzzel
 $browser = qutebrowser &
@@ -48,8 +46,8 @@ misc {
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE,26
+env = HYPRCURSOR_SIZE,26
 
 #####################
 ### LOOK AND FEEL ###
@@ -106,36 +104,21 @@ decoration {
     layerrule = blur, waybar
     layerrule = blur, launcher
     layerrule = ignorezero, launcher
+    layerrule = animation popin 80%, launcher
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = yes
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+  bezier = defaultBezier, 0.05, 1, 0.05, 1.00
 
-    bezier = easeOutQuint,0.23,1,0.32,1
-    bezier = easeInOutCubic,0.65,0.05,0.36,1
-    bezier = linear,0,0,1,1
-    bezier = almostLinear,0.5,0.5,0.75,1.0
-    bezier = quick,0.15,0,0.1,1
-
-    animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+  animation = windows, 1, 7, defaultBezier
+  animation = windowsOut, 1, 7, default, popin 80%
+  animation = border, 1, 10, default
+  animation = borderangle, 1, 8, default
+  animation = fade, 1, 7, default
+  animation = workspaces, 1, 6, defaultBezier
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
@@ -162,7 +145,7 @@ master {
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
     force_default_wallpaper = 1 # Set to 0 or 1 to disable pedophile wallpapers
-    disable_hyprland_logo = true # "If true disables the random hyprland logo / anime girl background. :(" thank god 
+    disable_hyprland_logo = true # "If true disables the random hyprland logo / anime girl background. :(" thank god
 }
 
 
