--- a/yazi/.config/yazi/keymap.toml
+++ b/yazi/.config/yazi/keymap.toml
@@ -1,4 +1,4 @@
-[[manager.prepend_keymap]]
+[[mgr.prepend_keymap]]
 on = "<C-d>"
 run = 'shell -- dragon-drop "$@"'
 desc = "Drag selected files with dragon-drop"
