--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -42,3 +42,5 @@ selection-foreground = #e6d300
 confirm-close-surface = false
 background-opacity = 0.8
 background-blur = true
+
+title = "@BeavOS~"
