Cleanup aisle hypr, added random Beavis & Butthead quotes.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -14,7 +14,7 @@ monitor = eDP-1,1536x1024@60,0x0,1
 ### PROGRAMS ###
 ################
 
-$terminal = ghostty -e fish -c "'sleep 0.05 && fastfetch'; exec fish"
+$terminal = ghostty -e fish
 $fileManagerGUI = thunar
 $fileManager = ghostty -e fish -c "yazi; exec fish"
 $menu = fuzzel
