added NIRI config

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -67,8 +67,7 @@ general {
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    # I have this on because it's easier on a trackpad. However I never have floating windows so it hardly matters.
-    resize_on_border = true
+    resize_on_border = false
 
     # Who would ever want this on bro
     allow_tearing = false
