--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -44,3 +44,5 @@ background-opacity = 0.8
 background-blur = true
 
 title = "@BeavOS~"
+window-decoration = none
+command = /usr/bin/fish --login --interactive
