--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -20,7 +20,7 @@ monitor=DP-3,1920x1080@75,2560x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # These are the programs I use, save for yazi, which is my main file manager. I have it bound in the keybinds section.
-$terminal = ghostty -e fish 
+$terminal = ghostty 
 $filemanager = thunar
 $menu = fuzzel
 $browser = qutebrowser
@@ -33,12 +33,10 @@ $taskmanager = ghostty -e fish -c "btop; exec fish"
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
 exec-once = waybar &
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprpaper &
+exec-once = fish -c "sleep 1 && ~/Zachs-Dotfiles/hypr/.config/hypr/AUDIO.sh"
 
 #############################
 ### ENVIRONMENT VARIABLES ###
