Ditching niri... Adjusted hyprland.conf for new plugin 'hyprscroller'.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -21,6 +21,8 @@ $menu = fuzzel
 $browser = qutebrowser &
 $chat = discord &
 
+
+
 #################
 ### AUTOSTART ###
 #################
@@ -33,6 +35,9 @@ exec-once = waybar & hyprpaper &
 exec-once = swayidle -w \
 	timeout 600 'hyprctl dispatch dpms off' \
 	resume 'hyprctl dispatch dpms on'
+
+# Reload plugins at launch
+exec-once = hyprpm reload -n
 
 misc {
 	mouse_move_enables_dpms = true
@@ -48,6 +53,7 @@ misc {
 
 env = XCURSOR_SIZE,26
 env = HYPRCURSOR_SIZE,26
+
 
 #####################
 ### LOOK AND FEEL ###
@@ -72,7 +78,14 @@ general {
     # Who would ever want this on bro
     allow_tearing = false
 
-    layout = dwindle
+    layout = scroller
+}
+
+plugin {
+  scroller {
+    gesture_sensitivity = 1
+    gesture_workspace_switch_enable = false
+  }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -172,7 +185,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = true
+    workspace_swipe = false
 }
 
 # Example per-device config
@@ -190,12 +203,30 @@ device {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
+# See https://github.com/cpiber/hyprscroller
+# Hyprscroller keybinds
+
+# fullscreen / reset fullscreen
+bind = $mainMod, F, scroller:fitwidth, active
+bindo = $mainMod, F, scroller:setwidth, onehalf
+
+# cycle window width
+bind = $mainMod, equal, scroller:cyclewidth, 1
+bind = $mainMod, minus, scroller:cyclewidth, -1
+
+# admit/expel window left/right
+bind = $mainMod, bracketleft, scroller:admitwindow, left
+bind = $mainMod, bracketright, scroller:admitwindow, right
+
+bindo = $mainMod, bracketleft, scroller:expelwindow, left
+bindo = $mainMod, bracketright, scroller:expelwindow, right
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, D, exec, $chat
-bind = $mainMod, F, fullscreen
+bind = $mainMod SHIFT, F, fullscreen, 0
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, E, exec, $fileManagerGUI
@@ -263,11 +294,12 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Swap focused window with neighbor
-# Goated bind to have, idk why it's not set up like this by default
-bind = $mainMod SHIFT, H, swapwindow, l
-bind = $mainMod SHIFT, L, swapwindow, r
-bind = $mainMod SHIFT, K, swapwindow, u
-bind = $mainMod SHIFT, J, swapwindow, d
+# Goated bind to have, idk why it's not sent up like this by default
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
+
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -284,3 +316,4 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
