--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -113,8 +113,10 @@ decoration {
         vibrancy = 0.1696
     }
     blurls = waybar
+    layerrule = blur, notifications
     layerrule = blur, waybar
     layerrule = blur, launcher
+    layerrule = ignorezero, notifications
     layerrule = ignorezero, launcher
     layerrule = animation popin 80%, launcher
 }
