--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -23,7 +23,8 @@ monitor=DP-3,1920x1080@75,2560x0,1
 $terminal = ghostty 
 $filemanager = thunar
 $menu = fuzzel
-$browser = qutebrowser
+$browser = librewolf
+$chat = discord
 $taskmanager = ghostty -e fish -c "btop; exec fish"
 
 #################
@@ -101,8 +102,11 @@ decoration {
     }
     layerrule = blur, waybar
     layerrule = blur, launcher
+    layerrule = blur, notifications
     layerrule = ignorezero, launcher
+    layerrule = ignorezero, notifications
     layerrule = animation popin 80%, launcher
+    layerrule = animation popin 80%, notifications
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
@@ -192,6 +196,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
+bind = $mainMod, D, exec, $chat
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, ghostty -e yazi
