tweaked hyprland.conf, mako

--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -3,6 +3,7 @@ background-color=#2a261966
 text-color=#fefbe9
 border-color=#d85a67
 border-radius=10
-width=450
+width=550
+height=450
 default-timeout=6000
 history=1
