--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -57,10 +57,10 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 2
-    gaps_out = 4
+    gaps_in = 4
+    gaps_out = 8
 
-    border_size = 4
+    border_size = 6
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(D85A67FF)
@@ -77,18 +77,18 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 5
-    rounding_power = 5
+    rounding = 25
+    rounding_power = 1
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
 
     shadow {
-        enabled = false
-        range = 4
-        render_power = 3
-        color = rgba(1a1a1aee)
+        enabled = true
+        range = 10
+        render_power = 5
+        color = rgba(1a1a1a99)
     }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
