enabled mako animations

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -119,6 +119,7 @@ decoration {
     layerrule = ignorezero, notifications
     layerrule = ignorezero, launcher
     layerrule = animation popin 80%, launcher
+    layerrule = animation popin 80%, notifications
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
