--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -20,7 +20,7 @@ monitor=DP-3,1920x1080@75,2560x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # These are the programs I use, save for yazi, which is my main file manager. I have it bound in the keybinds section.
-$terminal = ghostty 
+$terminal = kitty
 $filemanager = thunar
 $menu = fuzzel
 $browser = librewolf
