--- a/fuzzel/.config/fuzzel/fuzzel.ini
+++ b/fuzzel/.config/fuzzel/fuzzel.ini
@@ -1,9 +1,9 @@
-font=Roboto Mono:weight=bold:size=14
+font=Roboto Mono:weight=bold:size=13
 dpi-aware=no
-width=60
+width=30
 layer=overlay
 prompt="  | BeavOS > "
-placeholder="Um... do you need, like, an app or something?"
+placeholder="Fire! Fire!!"
 keyboard-focus=exclusive
 
 [colors]
