added foot terminal config.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -14,9 +14,9 @@ monitor = eDP-1,1536x1024@60,0x0,1
 ### PROGRAMS ###
 ################
 
-$terminal = ghostty -e fish
+$terminal = foot -e fish
 $fileManagerGUI = thunar
-$fileManager = ghostty -e fish -c "yazi; exec fish"
+$fileManager = foot -e fish -c "yazi; exec fish"
 $menu = fuzzel
 $browser = qutebrowser &
 $chat = discord &
