--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,11 +1,11 @@
 # BEGIN_KITTY_FONTS
-font_family      family="Roboto Mono"
+font_family      family='Roboto Mono'
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 # END_KITTY_FONTS
 
-font_size 14
+font_size 13
 
 
 confirm_os_window_close 0
