--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -13,6 +13,8 @@
 monitor=DP-1,2560x1440@144,0x0,1
 monitor=DP-3,1920x1080@75,2560x0,1
 
+workspace=name:1, monitor:DP-1
+
 #######################
 ### ZACH'S PROGRAMS ###
 #######################
@@ -25,7 +27,7 @@ $filemanager = thunar
 $menu = fuzzel
 $browser = librewolf
 $chat = discord
-$taskmanager = ghostty -e fish -c "btop; exec fish"
+$taskmanager = kitty -e fish -c "btop; exec fish"
 
 #################
 ### AUTOSTART ###
@@ -38,6 +40,7 @@ exec-once = waybar &
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprpaper &
 exec-once = fish -c "sleep 1 && ~/Zachs-Dotfiles/hypr/.config/hypr/AUDIO.sh"
+exec-once = hyprctl dispatch workspace 1
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -199,7 +202,7 @@ bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, D, exec, $chat
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, ghostty -e yazi
+bind = $mainMod, E, exec, kitty -e yazi
 bind = $mainMod, F, fullscreen
 bind = $mainMod SHIFT, E, exec, $filemanager
 bind = $mainMod, V, togglefloating,
@@ -266,12 +269,12 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-# Swap focused window with neighbor using Super + Arrow keys
+# Move focused window with neighbor using Super + Arrow keys
 # I don't know why this isn't here by default, it rules. 
-bind = $mainMod SHIFT, H, swapwindow, l
-bind = $mainMod SHIFT, L, swapwindow, r
-bind = $mainMod SHIFT, K, swapwindow, u
-bind = $mainMod SHIFT, J, swapwindow, d
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
 
 
 
