change branch name

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -42,6 +42,7 @@ exec-once = hyprpm reload -n
 misc {
 	mouse_move_enables_dpms = true
 	key_press_enables_dpms = true
+  vfr = true
 }
 
 
@@ -81,12 +82,22 @@ general {
     layout = scroller
 }
 
+# ABANDONING SHIP ON HYPRSCROLLER, GOING TO HYPRSCROLLING FOR NOW
+# edit: HYPRSCROLLER'S BACK!!
+
 plugin {
   scroller {
     gesture_sensitivity = 1
     gesture_workspace_switch_enable = false
   }
 }
+
+#plugin {
+#   hyprscrolling {
+#      follow_focus = true
+#      focus_fit_method = 1
+#   }
+#}
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
@@ -98,7 +109,7 @@ decoration {
     inactive_opacity = 1.0
 
     shadow {
-        enabled = true
+        enabled = false
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
@@ -156,7 +167,6 @@ dwindle {
 master {
     new_status = master
 }
-
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
     force_default_wallpaper = 1 # Set to 0 or 1 to disable pedophile wallpapers
@@ -187,9 +197,12 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-# gestures {
+#gestures {
 #     workspace_swipe = false
-# }
+#gesture = 3, left, dispatcher, movefocus, r
+#gesture = 3, right, dispatcher, movefocus, l
+#gesture = 4, horizontal, move
+#}
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
@@ -199,7 +212,7 @@ device {
 }
 
 
-###################
+###################t
 ### KEYBINDINGS ###
 ###################
 
@@ -209,18 +222,25 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # See https://github.com/cpiber/hyprscroller
 # Hyprscroller keybinds
 
-# fullscreen / reset fullscreen
-bind = $mainMod, F, scroller:fitwidth, active
-bindo = $mainMod, F, scroller:setwidth, onehalf
+# TODO: FIX HYPRSCROLLER
 
-# cycle window width
+# fullscreen / reset fullscreen
+# bind = $mainMod, F, layoutmsg, fit active
+# bindo = $mainMod, F, layoutmsg, colresize 0.5
+#bind = $mainMod SHIFT, H, layoutmsg, swapcol l
+#bind = $mainMod, equal, layoutmsg, colresize +0.2
+# bind = $mainMod, minus, layoutmsg, colresize -0.2
+bindo = $mainMod, F, scroller:setwidth, onehalf
+bind = $mainMod, F, scroller:fitwidth, active
+# 
+# # cycle window width
 bind = $mainMod, equal, scroller:cyclewidth, 1
 bind = $mainMod, minus, scroller:cyclewidth, -1
-
-# admit/expel window left/right
+# 
+# # admit/expel window left/right
 bind = $mainMod, bracketleft, scroller:admitwindow, left
 bind = $mainMod, bracketright, scroller:admitwindow, right
-
+# 
 bindo = $mainMod, bracketleft, scroller:expelwindow, left
 bindo = $mainMod, bracketright, scroller:expelwindow, right
 
@@ -244,6 +264,11 @@ bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
+
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, J, movewindow, d
+bind = $mainMod SHIFT, K, movewindow, u
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -298,10 +323,10 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Swap focused window with neighbor
 # Goated bind to have, idk why it's not sent up like this by default
-bind = $mainMod SHIFT, H, movewindow, l
-bind = $mainMod SHIFT, L, movewindow, r
-bind = $mainMod SHIFT, K, movewindow, u
-bind = $mainMod SHIFT, J, movewindow, d
+# bind = $mainMod SHIFT, H, movewindow, l
+# bind = $mainMod SHIFT, L, movewindow, r
+# bind = $mainMod SHIFT, K, movewindow, u
+# bind = $mainMod SHIFT, J, movewindow, d
 
 
 ##############################
@@ -319,4 +344,3 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-
