--- a/fuzzel/.config/fuzzel/fuzzel.ini
+++ b/fuzzel/.config/fuzzel/fuzzel.ini
@@ -1,8 +1,8 @@
 font=Roboto Mono:weight=bold:size=13
-width=60
+width=25
 layer=overlay
 prompt="  | BeavOS > "
-placeholder="Um... do you need, like, an app or something?"
+placeholder="Fire! Fire!!!"
 keyboard-focus=exclusive
 
 [colors]
