Added separate screenshot script to mango config

--- a/mango/.config/mango/config.conf
+++ b/mango/.config/mango/config.conf
@@ -119,7 +119,7 @@ borderpx=5
 rootcolor=0x201b14ff
 bordercolor=0x4a3f20ff
 focuscolor=0xe6d300ff
-maxmizescreencolor=0xd85a67ff
+maximizescreencolor=0xf0ebcdff
 urgentcolor=0xe08e1fff
 scratchpadcolor=0x516c93ff
 globalcolor=0xb153a7ff
@@ -146,12 +146,12 @@ tagrule=id:9,layout_name:tile
 bind=SUPER+SHIFT,r,reload_config
 
 # Tools + Software
-bind=SUPER,a,spawn_shell,flock -n /tmp/screenie.lock bash -c 'CDT=$(date +"%Y-%m-%d-%H%M%S") && dulcepan -c ~/.config/dulcepan/dulcepan.cfg -o ~/Pictures/Screenshots/screenie-$CDT.png && wl-copy < ~/Pictures/Screenshots/screenie-$CDT.png && rm /tmp/screenie.lock'
+bind=SUPER,a,spawn,~/.config/mango/screenie.sh
 bind=SUPER,q,spawn,kitty
 bind=SUPER,space,spawn,fuzzel
 bind=SUPER,e,spawn,kitty -e yazi
 bind=SUPER+SHIFT,e,spawn,thunar
-bind=SUPER,b,spawn,librewolf
+bind=SUPER,b,spawn,helium
 bind=SUPER,d,spawn,discord
 
 # exit
@@ -173,14 +173,16 @@ bind=SUPER+SHIFT,l,exchange_client,right
 
 # switch window status
 #bind=SUPER,g,toggleglobal,
-bind=SUPER,o,toggleoverview,
-bind=SUPER,v,togglefloating,
-bind=SUPER,f,togglemaxmizescreen,
-bind=SUPER+SHIFT,f,togglefullscreen,
+bind=SUPER,o,toggleoverview
+bind=SUPER,v,togglefloating
+bind=SUPER,f,togglemaximizescreen
+bind=SUPER+SHIFT,f,togglefullscreen
 #bind=ALT+SHIFT,f,togglefakefullscreen,
 #bind=SUPER,i,minimized,
 #bind=SUPER+SHIFT,o,toggleoverlay,
 #bind=SUPER+SHIFT,I,restore_minimized
+
+# doesn't work???
 bind=SUPER+SHIFT,s,toggle_scratchpad
 
 # scroller layout
@@ -259,6 +261,7 @@ mousebind=SUPER,btn_right,moveresize,curresize
 # layer rule
 layerrule=animation_type_open:zoom,layer_name:launcher
 layerrule=animation_type_close:zoom,layer_name:launcher
+layerrule=noblur:1,layer_name:selection
 layerrule=noblur:1,layer_name:dulcepan
 
 # monitor rule
